# Spectral_type_classification

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/spectral_type_classification/: __init__.py
tests/: test_spectral_type_classification.py
